--- a/data_cookbook/polarin_bottles.ipynb
+++ b/data_cookbook/polarin_bottles.ipynb
@@ -582,13 +582,10 @@
         "id": "jQJPALOH1rtd"
       },
       "source": [
-        "<center>\n",
-        "  <div style=\"display: flex; justify-content: center; align-items: flex-start; gap: 20px;\">\n",
-        "    <img src=\"https://ocean-ice.eu/wp-content/uploads/2025/02/TO-USE-RGB-for-digital-materials-V.png\" height=\"120\" style=\"margin-top: 50px;\"/>\n",
-        "    <img src=\"https://eu-polarin.eu/wp-content/uploads/2024/04/polarin-web1.svg\" height=\"100\"/>\n",
-        "    <img src=\"https://emodnet.ec.europa.eu/sites/emodnet.ec.europa.eu/files/public/emodnet_logos/web/EMODnet_standard_colour.png\" height=\"100\"/>\n",
-        "  </div>\n",
-        "</center>"
+        "| | | |\n",
+        "|:-:|:-:|:-:|\n",
+        "| <img src=\"https://ocean-ice.eu/wp-content/uploads/2025/02/TO-USE-RGB-for-digital-materials-V.png\" width=\"160\"/> | <img src=\"https://eu-polarin.eu/wp-content/uploads/2024/04/polarin-web1.svg\" width=\"140\"/> | <img src=\"https://emodnet.ec.europa.eu/sites/emodnet.ec.europa.eu/files/public/emodnet_logos/web/EMODnet_standard_colour.png\" width=\"140\"/> |\n",
+        "\n"
       ]
     }
   ],
