fixed bottles logos

--- a/data_cookbook/polarin_erddap_querying_tabledap.ipynb
+++ b/data_cookbook/polarin_erddap_querying_tabledap.ipynb
@@ -57,7 +57,7 @@
       },
       "outputs": [],
       "source": [
-        "# !pip install requests pandas\n",
+        "!pip install requests pandas\n",
         "# these packages should be installed with the command above if running the code locally\n",
         "\n",
         "import requests\n",
@@ -2067,13 +2067,9 @@
         "id": "U1igB8nMPd9r"
       },
       "source": [
-        "<center>\n",
-        "  <div style=\"display: flex; justify-content: center; align-items: flex-start; gap: 20px;\">\n",
-        "    <img src=\"https://ocean-ice.eu/wp-content/uploads/2025/02/TO-USE-RGB-for-digital-materials-V.png\" height=\"120\" style=\"margin-top: 50px;\"/>\n",
-        "    <img src=\"https://eu-polarin.eu/wp-content/uploads/2024/04/polarin-web1.svg\" height=\"100\"/>\n",
-        "    <img src=\"https://emodnet.ec.europa.eu/sites/emodnet.ec.europa.eu/files/public/emodnet_logos/web/EMODnet_standard_colour.png\" height=\"100\"/>\n",
-        "  </div>\n",
-        "</center>"
+        "| | | |\n",
+        "|:-:|:-:|:-:|\n",
+        "| <img src=\"https://ocean-ice.eu/wp-content/uploads/2025/02/TO-USE-RGB-for-digital-materials-V.png\" width=\"160\"/> | <img src=\"https://eu-polarin.eu/wp-content/uploads/2024/04/polarin-web1.svg\" width=\"140\"/> | <img src=\"https://emodnet.ec.europa.eu/sites/emodnet.ec.europa.eu/files/public/emodnet_logos/web/EMODnet_standard_colour.png\" width=\"140\"/> |\n"
       ]
     }
   ],
