fixed binder links

--- a/notebooks_binder/polarin_bottles.ipynb
+++ b/notebooks_binder/polarin_bottles.ipynb
@@ -20,19 +20,11 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "This notebook can be run with Binder by following the link:\n",
-        "[polarin_bottles](https://mybinder.org/v2/gh/POLAR-RESEARCH-INFRASTRUCTURE-NETWORK/jupyter-notebooks/HEAD?urlpath=%2Fdoc%2Ftree%2Fdata_cookbook%2Fpolarin_bottles.ipynb)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "metadata": {
         "id": "w64_HtWpbu7N"
       },
       "source": [
-        "The purpose of this notebook is to show the use of in situ observations as bottle data to assess ocean circulation, carbon uptake and environemntal changes."
+        "The purpose of this notebook is to show the use of in situ observations as bottle data to assess ocean circulation, carbon uptake and environmental changes."
       ]
     },
     {
@@ -63,8 +55,7 @@
       },
       "outputs": [],
       "source": [
-        "# @title\n",
-        "# !pip install cartopy scipy seaborn\n",
+        "!pip install cartopy scipy seaborn\n",
         "from ipywidgets import Dropdown, Layout, HBox, VBox, Output\n",
         "from scipy.stats import linregress\n",
         "from io import BytesIO\n",
